test/policies/pod-disruption-budget.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pdb-minavailable-check
spec:
  rules:
    - name: pdb-minavailable
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
      preconditions:
        all:
          - key: "{{request.operation || 'BACKGROUND'}}"
            operator: AnyIn
            value:
              - CREATE
              - UPDATE
          - key: "{{ request.object.spec.replicas || `1` }}"
            operator: GreaterThan
            value: 0
      context:
        - name: minavailable
          apiCall:
            urlPath: /apis/policy/v1/namespaces/{{request.namespace}}/poddisruptionbudgets
            jmesPath: items[?label_match(spec.selector.matchLabels, `{{request.object.spec.template.metadata.labels}}`)] | [0] | spec.minAvailable || `0`
      validate:
        failureAction: Enforce
        message: >-
          The matching PodDisruptionBudget for this resource has its minAvailable value equal to the replica count
          which is not permitted ("{{ minavailable }}"/"{{ request.object.spec.replicas }}").
        deny:
          conditions:
            any:
              - key: "{{ request.object.spec.replicas }}"
                operator: Equals
                value: "{{ minavailable }}"
